--- a/GoodEntertainment/Base.lproj/Main.storyboard
+++ b/GoodEntertainment/Base.lproj/Main.storyboard
@@ -35,58 +35,136 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T3D-IE-NLE">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="570"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="XLu-fk-e9q" id="8BS-Wj-eOe"/>
-                                    <outlet property="delegate" destination="XLu-fk-e9q" id="Txx-HY-9xT"/>
-                                </connections>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APG-fN-ROr" customClass="HYLSendCommentView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdZ-98-w7V">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" red="0.99160593748092651" green="0.0079045491293072701" blue="0.11603889614343643" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EjS-x4-EGB">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="点击评论..." minimumFontSize="17" background="textfieldbackground" translatesAutoresizingMaskIntoConstraints="NO" id="oUK-az-9Aq">
+                                        <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iaC-LU-Ef3">
+                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="L1Q-n8-yQo"/>
+                                            <constraint firstAttribute="height" constant="30" id="td2-UL-h7a"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="发表">
+                                            <color key="titleColor" red="1" green="0.7803921568627451" blue="0.011764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="L1Q-n8-yQo"/>
+                                                <exclude reference="td2-UL-h7a"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="L1Q-n8-yQo"/>
+                                                <include reference="td2-UL-h7a"/>
+                                            </mask>
+                                        </variation>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="iaC-LU-Ef3" firstAttribute="leading" secondItem="oUK-az-9Aq" secondAttribute="trailing" constant="-67" id="Cor-e5-FXs"/>
+                                    <constraint firstAttribute="bottom" secondItem="oUK-az-9Aq" secondAttribute="bottom" constant="10" id="GLd-jV-EZQ">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="5"/>
+                                    </constraint>
+                                    <constraint firstItem="oUK-az-9Aq" firstAttribute="leading" secondItem="EjS-x4-EGB" secondAttribute="leading" id="Mwc-gJ-6hv">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="50" id="d3C-eF-eiw"/>
+                                    <constraint firstItem="iaC-LU-Ef3" firstAttribute="top" secondItem="oUK-az-9Aq" secondAttribute="bottom" constant="-35" id="mFV-TR-Dmt"/>
+                                    <constraint firstItem="oUK-az-9Aq" firstAttribute="top" secondItem="EjS-x4-EGB" secondAttribute="top" constant="10" id="ndv-eU-z9y">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="5"/>
+                                    </constraint>
+                                    <constraint firstAttribute="trailing" secondItem="oUK-az-9Aq" secondAttribute="trailing" id="vBB-Na-gpf">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                    </constraint>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="oUK-az-9Aq"/>
+                                        <exclude reference="iaC-LU-Ef3"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <exclude reference="d3C-eF-eiw"/>
+                                        <exclude reference="GLd-jV-EZQ"/>
+                                        <exclude reference="Mwc-gJ-6hv"/>
+                                        <exclude reference="ndv-eU-z9y"/>
+                                        <exclude reference="vBB-Na-gpf"/>
+                                        <exclude reference="Cor-e5-FXs"/>
+                                        <exclude reference="mFV-TR-Dmt"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="subviews">
+                                        <include reference="oUK-az-9Aq"/>
+                                        <include reference="iaC-LU-Ef3"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <include reference="d3C-eF-eiw"/>
+                                        <include reference="GLd-jV-EZQ"/>
+                                        <include reference="Mwc-gJ-6hv"/>
+                                        <include reference="ndv-eU-z9y"/>
+                                        <include reference="vBB-Na-gpf"/>
+                                        <include reference="Cor-e5-FXs"/>
+                                        <include reference="mFV-TR-Dmt"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="APG-fN-ROr" firstAttribute="top" secondItem="T3D-IE-NLE" secondAttribute="bottom" id="CEr-oW-w7f"/>
-                            <constraint firstItem="APG-fN-ROr" firstAttribute="leading" secondItem="zEU-X9-HZl" secondAttribute="leading" id="GHx-QX-arI"/>
-                            <constraint firstItem="T3D-IE-NLE" firstAttribute="leading" secondItem="zEU-X9-HZl" secondAttribute="leading" id="KZb-vy-yhB"/>
-                            <constraint firstItem="SSK-Eo-JFU" firstAttribute="top" secondItem="APG-fN-ROr" secondAttribute="bottom" id="MjD-ia-L3y"/>
-                            <constraint firstAttribute="trailing" secondItem="T3D-IE-NLE" secondAttribute="trailing" id="OZa-Vy-vu3"/>
-                            <constraint firstItem="T3D-IE-NLE" firstAttribute="top" secondItem="zEU-X9-HZl" secondAttribute="top" id="S29-mD-fHD"/>
-                            <constraint firstAttribute="trailing" secondItem="APG-fN-ROr" secondAttribute="trailing" id="hGc-RU-djh"/>
-                            <constraint firstItem="SSK-Eo-JFU" firstAttribute="top" secondItem="T3D-IE-NLE" secondAttribute="bottom" constant="30" id="pyH-aH-MEu">
-                                <variation key="heightClass=regular-widthClass=compact" constant="50"/>
-                            </constraint>
+                            <constraint firstItem="EjS-x4-EGB" firstAttribute="leading" secondItem="zEU-X9-HZl" secondAttribute="leading" id="A7q-tt-GdI"/>
+                            <constraint firstItem="vdZ-98-w7V" firstAttribute="top" secondItem="zEU-X9-HZl" secondAttribute="top" id="LZW-Qo-orb"/>
+                            <constraint firstItem="SSK-Eo-JFU" firstAttribute="top" secondItem="EjS-x4-EGB" secondAttribute="bottom" id="Tqx-M9-TRj"/>
+                            <constraint firstAttribute="trailing" secondItem="EjS-x4-EGB" secondAttribute="trailing" id="bM1-xo-jZ8"/>
+                            <constraint firstItem="vdZ-98-w7V" firstAttribute="leading" secondItem="zEU-X9-HZl" secondAttribute="leading" id="ler-wK-9TS"/>
+                            <constraint firstItem="EjS-x4-EGB" firstAttribute="top" secondItem="vdZ-98-w7V" secondAttribute="bottom" id="pxq-es-bIN"/>
+                            <constraint firstAttribute="trailing" secondItem="vdZ-98-w7V" secondAttribute="trailing" id="tlJ-93-hBa"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="APG-fN-ROr"/>
+                                <exclude reference="vdZ-98-w7V"/>
+                                <exclude reference="EjS-x4-EGB"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="CEr-oW-w7f"/>
-                                <exclude reference="GHx-QX-arI"/>
-                                <exclude reference="hGc-RU-djh"/>
-                                <exclude reference="MjD-ia-L3y"/>
+                                <exclude reference="Tqx-M9-TRj"/>
+                                <exclude reference="A7q-tt-GdI"/>
+                                <exclude reference="bM1-xo-jZ8"/>
+                                <exclude reference="pxq-es-bIN"/>
+                                <exclude reference="LZW-Qo-orb"/>
+                                <exclude reference="ler-wK-9TS"/>
+                                <exclude reference="tlJ-93-hBa"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
-                                <include reference="APG-fN-ROr"/>
+                                <include reference="vdZ-98-w7V"/>
+                                <include reference="EjS-x4-EGB"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="CEr-oW-w7f"/>
-                                <include reference="GHx-QX-arI"/>
-                                <include reference="hGc-RU-djh"/>
-                                <include reference="MjD-ia-L3y"/>
+                                <include reference="Tqx-M9-TRj"/>
+                                <include reference="A7q-tt-GdI"/>
+                                <include reference="bM1-xo-jZ8"/>
+                                <include reference="pxq-es-bIN"/>
+                                <include reference="LZW-Qo-orb"/>
+                                <include reference="ler-wK-9TS"/>
+                                <include reference="tlJ-93-hBa"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="commentView" destination="APG-fN-ROr" id="ymf-gF-1b7"/>
-                        <outlet property="tableView" destination="T3D-IE-NLE" id="Q4h-6E-SI6"/>
+                        <outlet property="scrollView" destination="vdZ-98-w7V" id="YFN-pR-aHe"/>
+                        <outlet property="textBackgroundView" destination="EjS-x4-EGB" id="aZg-Ec-nDP"/>
+                        <outlet property="textField" destination="oUK-az-9Aq" id="C7O-kk-krQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ey-2A-5ri" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -94,4 +172,7 @@
             <point key="canvasLocation" x="820.5" y="-1577.25"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="textfieldbackground" width="361" height="34"/>
+    </resources>
 </document>
